deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bring-hermes
  labels:
    app.kubernetes.io/name: bring-hermes
spec:
  selector:
    app.kubernetes.io/name: bring-hermes
  ports:
    - name: http
      port: 8080
      targetPort: http
